# 3D_Shooter

./: .gitignore  CMakeLists.txt  README.md
include/engine/: engine.h  vect2.h  vect3.h  zapplication.h  zexceptions.h  zwindow.h
include/engine/core/: constants.h  core.h  matrix.h  pngimage.h  vect2.h  vect3.h  vect4.h
include/engine/core/math/: math.h  matrix.h  vect2.h  vect3.h  vect4.h
include/engine/core/memory/: arrayhandler.h  basecresourcehandler.h  baseresourcehandler.h  cfilehandler.h  memory.h
include/engine/errors/: debug.h  errors.h  exceptions.h
include/engine/memorry/: basecresourcehandler.h  baseresourcehandler.h
include/engine/render/: camera.h  render.h  renderer.h  shader.h  texture.h  vertexarray.h
shader/: simple.vertex  simpletexture.fragment  simpletexture.vertex  triangletest.fragment  triangletest.vertex
src/: main.cpp
src/engine/: zapplication.cpp  zexceptions.cpp  zwindow.cpp
src/engine/core/: pngimage.cpp
src/engine/errors/: debug.cpp  zexception.cpp  zoutofrangeexception.cpp
src/engine/render/: camera.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexarray.cpp
test/: matrix_transform_2d.cpp  vec2_test.cpp  vect2_test.cpp  vect3_test.cpp
